--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
   buildCommand: |
     pip install --upgrade pip
     pip install -r requirements.txt
-  startCommand: gunicorn  --chdir src app:server
+  startCommand: gunicorn  --chdir src main:app
   envVars:
   - key: FLASK_ENV
     value: production
